2001-12-05  Alex Graveley  <alex@ximian.com>

	* src/libsoup/soup-fault.c: Formatting nitpicks.

	* src/libsoup/soup-server.c (free_handler): Call unregister handler.

	* src/libsoup/soup-server.h: Add unregister callback to
	SoupServerHandler so handlers can free temporary resources on
	server shutdown.

	* src/libsoup/soup-transfer.c (soup_transfer_write_cb): Call
	headers_done_cb if wrote >= header_len.

	* src/libsoup/soup-dav-server.c (soup_dav_server_register): Pass
	dav_unregister_handler to soup_server_register, to cleanup state
	on server free.

	* src/libsoup/soup-env.c: Rehash.

	* src/libsoup/soup-message.c (soup_message_new): Allow NULL
	contexts.
	(soup_message_copy): Impl. Copy request/response buffers.

	* src/libsoup/soup-queue.c (soup_queue_message): Handle NULL
	message contexts by issuing a cancelled callback.  Break out queue
	initialization to soup_queue_initialize(). 

2001-12-04  Dan Winship  <danw@ximian.com>

	* src/libsoup/soup-message.c (soup_message_requeue): Don't try to
	wait for the rest of the data if the read_tag is 0 (eg, if the
	write attempt got an EPIPE). Fixes a crash if the server
	idle-timeouts a keepalived connection.

2001-12-02  Alex Graveley  <alex@ximian.com>

	* src/libsoup/soup-private.h: Remove req_header from
	SoupMessagePrivate.

	* src/libsoup/soup-message.c (finalize_message): No more
	req_header.

	* src/libsoup/soup-queue.c (start_request): Ditto.

	* src/libsoup/soup-server.c (read_done_cgi_cb): Ditto.
	(read_done_cb): Ditto.

2001-12-01  Alex Graveley  <alex@ximian.com>

	* src/libsoup/soup-server-auth.h: Pull the SoupServerAuth from
	soup-server.h to here.

	* tests/cgi-test.c: 
	* tests/mod-server-test.c: 
	* tests/server-test.c: Update for new server api. Add a handler
	that sets the errorphrase, add some response headers, and prints
	the request body, uri, and headers in the response.

	* src/soup-httpd/soup-httpd.c: Update for new server api, remove
	module reloading, which trivializes the server code.
